--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Socket.io</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
+    <style>
+      form {
+        padding: 20px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        padding-right: 50px;
+      }
+      #messages {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+      }
+      #messages li {
+        padding: 5px 10px;
+      }
+      #messages li:nth-child(odd) {
+        background: #eee;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="container-fluid mt-4">
+      <div class="row">
+        <ul id="messages"></ul>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <form action="">
+            <div class="input-group mb-3">
+              <input
+                id="m"
+                type="text"
+                class="form-control"
+                autocomplete="off"
+                placeholder="Message..."
+                aria-label="Message..."
+                aria-describedby="button-addon2"
+              />
+              <button
+                class="btn btn-secondary"
+                type="submit"
+                id="button-addon2"
+              >
+                Send
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      const socket = io();
+      // calling io() without a socket argument assumes connection to the same localhost
+      //  otherwise, socket should be passed to io(), eg: 'http://localhost:3000'
+
+      $('form').submit(() => {
+        socket.emit('message', $('#m').val());
+        $('#m').val('');
+        return false;
+      });
+
+      socket.on('connect', () => {
+        // emitting to everybody
+        socket.emit('message', 'user connected');
+      });
+
+      socket.on('message', (msg) => {
+        $('#messages').append($('<li>').text(msg));
+      });
+    </script>
+  </body>
 </html>
