Add a tech namespace

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const socket = io();
+      const socket = io('/tech');
       // calling io() without a socket argument assumes connection to the same localhost
       //  otherwise, socket should be passed to io(), eg: 'http://localhost:3000'
 
